test/errors/sql_constraints_error/zs/constraint_constant.zs
package constraint_constant;

const uint16 ConstraintsConstant = 123;

struct SomeStructure
{
    uint32  someValue;
};
